# CurrencyRateChanges

./: pyproject.toml  test.py
test_task/currency/: apps.py  forms.py  urls.py  views.py
test_task/templates/: base.html
test_task/templates/pages/: home.html
test_task/test_task/: settings.py  urls.py
